--- a/Resources/Strings/AppResource.resx
+++ b/Resources/Strings/AppResource.resx
@@ -189,4 +189,7 @@
   <data name="Confirm" xml:space="preserve">
     <value>Confirm</value>
   </data>
+  <data name="ConfirmBooking" xml:space="preserve">
+    <value>Confirm Booking</value>
+  </data>
 </root>
